# projektsieci

build-projektsieci2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: cmake_install.cmake
projektsieci2/: CMakeLists.txt  CMakeLists.txt.user.74692e4  CMakeLists.txt.user.86cc800  CMakeLists.txt.user.9e00cfd  mainwindow.cpp  mainwindow.h  mainwindow.ui
projektsieci2/build-projektsieci2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: cmake_install.cmake  qtcsettings.cmake
projektsieci2/client/: Client.cpp  Client.h  Death_screen.cpp  Death_screen.h  Death_screen.ui  Game_state_client.cpp  Game_state_client.h  Game_window.cpp  Game_window.h  Lobby_window.cpp  Lobby_window.h  Network_client.cpp  Network_client.h  background.qrc  connect_window.cpp  connect_window.h  connectwindow.ui  connectwindow.ui.autosave  gamewindow.ui  lobbywindow.ui
projektsieci2/client/resources/: aim.png-autosave.kra
projektsieci2/projektsieci2/client/: Client.h  Game_state_client.cpp  Game_window.cpp  Game_window.h  background.qrc  connect_window.cpp  connect_window.h  lobbywindow.ui
projektsieci2/projektsieci2/server/: Host.cpp  Host.h  Host_window.cpp  Host_window.h  Server.cpp  Server.h  _server.cpp  _server.h  myserverbridge.cpp  myserverbridge.h
projektsieci2/server/: Game_state.cpp  Game_state.h  Game_state_client.h  Host.cpp  Host.h  Host_window.cpp  Host_window.h  Network_server.cpp  Network_server.h  Player.cpp  Player.h  Server.cpp  Server.cpp.autosave  Server.h  Server_window.cpp  Server_window.h  _server.cpp  _server.h  hostwindow.ui  myserverbridge.cpp  myserverbridge.h  serverwindow.ui
projektsieciklient/: CMakeLists.txt.user.86cc800  mainwindow.cpp  mainwindow.h
projektsieciklient/client/: Client.cpp  Client.h  Death_screen.h  Death_screen.ui  Game_state_client.h  background.qrc  connect_window.cpp  connect_window.h  connectwindow.ui  gamewindow.ui
projektsieciklient/server/: Game_state_client.h  Host_window.cpp  Server.cpp  Server_window.cpp  Server_window.h  hostwindow.ui  serverwindow.ui
